<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Restaurant User</string>
    <string name="menu_name">Restaurant</string>
    <string name="facebook_id">1234567890</string>
    <string name="language_english">en</string>
    <string name="language_hindi">ar</string>
    <string name="font_regular">fonts/Poppins-Regular.ttf</string>
    <string name="font_medium">fonts/Poppins-Medium.ttf</string>
    <string name="font_bold">fonts/Poppins-Bold.ttf</string>
    <string name="font_black">fonts/Poppins-Black.ttf</string>
    <string name="font_thin">fonts/Poppins-SemiBold.ttf</string>
    <string name="font_light">fonts/Poppins-Light.ttf</string>
    <string name="font_italic">fonts/Poppins-ExtraBold.ttf</string>
    <string name="logout">Are you sure to logout from this app?</string>
    <string name="exit_screen">Are you sure to exit from this app?</string>
    <string name="no_internet">No internet connection.\n Go to device settings and connect to network</string>
    <string name="error_msg">Please try again. Something went wrong</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings</string>
    <string name="addtocart">Add to cart</string>
    <string name="order_place">Order placed</string>
    <string name="order_ready">Order accepted</string>
    <string name="on_the_way">Order on the way</string>
    <string name="order_delivered">Order delivered</string>
    <string name="don_t_receive_the_otp">Don’t receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="validation_otp">Please enter OTP</string>
    <string name="validation_valid_email">Please enter valid email</string>
    <string name="validation_valid_cpassword">Password and confirm password must be same</string>
    <string name="validation_address">Please enter address</string>
    <string name="delivery_address">Delivery address</string>
    <string name="validation_all">Please enter all details</string>
    <string name="cart">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="order_cancelled_you">Order cancelled by you</string>
    <string name="order_cancelled_admin">Order cancelled by admin</string>
    <string name="no_data_found">No data found</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="edit_profile">Edit profile</string>
    <string name="update">Save</string>
    <string name="detail">Description</string>
    <string name="add_ons">Add-ons</string>
    <string name="notes">Note</string>
    <string name="hint_write_notes">Write notes</string>
    <string name="ingredients">Ingredients</string>
    <string name="item_currently_unavailable">Item currently unavailable</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_registered_email">Enter your registered email address below. We will <br> </br> send new password in your email.</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="forgot_password_login">Forgot Password?</string>
    <string name="or">---------- OR ----------</string>
    <string name="skip_amp_continue"><![CDATA[Skip & Continue]]></string>
    <string name="payment_summery">Payment summary</string>
    <string name="order_summary">Order summary</string>
    <string name="order_total">Order total</string>
    <string name="tax_0">Tax(0%)</string>
    <string name="delivery_charge">Delivery charge</string>
    <string name="discount_offer">Discount offer</string>
    <string name="total_amount">Total amount</string>
    <string name="driver_information">Driver information</string>
    <string name="door_flat_no">Door / Flat no</string>
    <string name="landmark_">Landmark</string>
    <string name="pincode">Pincode</string>
    <string name="cancelled_order">Cancel Order</string>
    <string name="otp_verification"><![CDATA[Verify & Proceed]]></string>
    <string name="otp_verifiy">OTP Verification</string>
    <string name="enter_the_otp_sent_to">Enter OTP below and proceed further.</string>
    <string name="enter_otp">Enter OTP here</string>
    <string name="choose_desired_payment">Choose desired payment type to pay for this order.<br> </br>We offer multiple payment options.</string>
    <string name="payment">Payment</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="share">SHARE</string>
    <string name="refer_amp_earn"><![CDATA[REFER & EARN]]></string>
    <string name="share_this_code_with">Share this code with a friend and you both <br> </br> could be eligble for $0 bonus amount <br> </br> under our Referral Program.</string>
    <string name="sign_up">Signup</string>
    <string name="full_name">Full name</string>
    <string name="mobileno">Mobile</string>
    <string name="referral_code_optional">Referral code (Optional)</string>
    <string name="password">Password</string>
    <string name="i_accept_the_terms_amp_conditions"><![CDATA[I accept the terms & conditions]]></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="search">Search</string>
    <string name="order_success">Order Success</string>
    <string name="continue_shooping">Continue Shopping</string>
    <string name="your_order_has_been_successfully_placed_n_amp_will_be_process_by_system">Your order has been successfully placed \n <![CDATA[&]]> will be process by system</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="selected_add_ons_list">Selected Add-ons</string>
    <string name="set_image_form_gallery">Select image form gallery</string>
    <string name="set_image_form_camera">Select image form camera</string>
    <string name="log_out">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="note">Note</string>
    <string name="okay">Okay</string>
    <string name="card_information">Card information</string>
    <string name="write_a_review">Write a review</string>
    <string name="type_your_description">Enter your review</string>
    <string name="categories">Categories</string>
    <string name="favourite_list">Favourite List</string>
    <string name="my_wallet">My Wallet</string>
    <string name="wallet_balance">WALLET BALANCE</string>
    <string name="order_history">My Orders</string>
    <string name="ratting"><![CDATA[Ratings & Reviews]]></string>
    <string name="setting">Settings</string>
    <string name="refer_amp_earn_set"><![CDATA[Refer & Earn]]></string>
    <string name="select_layout">Select layout</string>
    <string name="ltr">LTR</string>
    <string name="rtl">RTL</string>
    <string name="home">Home</string>
    <string name="my_orders">My Orders</string>
    <string name="ratting_amp_review"><![CDATA[Ratings & Reviews]]></string>
    <string name="order_id">Order Id : </string>
    <string name="qty">Qty :</string>
    <string name="status">Status :</string>
    <string name="copy">Copy</string>
    <string name="promo_code">Promocode</string>
    <string name="select_promocode">Select promocode</string>
    <string name="enter_promo_code">Have a promocode?</string>
    <string name="apply">Apply</string>
    <string name="remove">Remove</string>
    <string name="tax">Tax</string>
    <string name="delivery">Delivery</string>
    <string name="pickup">Pickup</string>
    <string name="address">Set your delivery address</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="design_developed_by">Designed <![CDATA[ & ]]>Developed by \n Gravity Infotech</string>
    <string name="about_us">About us</string>
    <string name="address_error">Please select address</string>
    <string name="building">Door / Flat no :</string>
    <string name="landmark">Landmark :</string>
    <string name="zipcode">Pincode :</string>
    <string name="select_address">Select Address</string>
    <string name="select_address_type">Select address type</string>
    <string name="neighborHood">Pincode</string>
    <string name="save_address">Save address</string>
    <string name="update_address">Update address</string>
    <string name="edit_address">Edit Address</string>
    <string name="new_address">New Address</string>
    <string name="add_money">Add Money</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="message_text">Message</string>
    <string name="amount">Amount (Ex. : 10.00)</string>
    <string name="proceed">Proceed</string>
    <string name="help_amp_contact_us"><![CDATA[Help & Contact Us]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="inquiry_form">Inquiry Form</string>
    <string name="my_address">My Addresses</string>
    <string name="order_pickedUp">Order picked up</string>
    <string name="cash">Cash</string>
    <string name="razorpay">Razorpay</string>
    <string name="wallet">Wallet</string>
    <string name="order_detail">Order Details</string>
    <string name="order_now">Order now</string>
    <string name="order_id_">Order Id : </string>
    <string name="payment_type_">Payment Type :</string>
    <string name="select_pincode">Select Pincode</string>
    <string name="wallet_history">Wallet History</string>
    <string name="manage_addresses">Manage addresses</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="invalid_key">Invalid google map api key</string>
    <string name="sttripe_payment">Stripe Payment</string>
    <string name="rezorpay_payment">Razorpay Payment</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="delete_cart_alert">Are you sure to remove this item from your cart list?</string>
    <string name="select_file">Select File</string>
    <string name="free">Free</string>
    <string name="delete_address_alert">Are you sure to delete this address?</string>
    <string name="wallet_description">Are you sure to cancel this order? If yes, then order amount will be transferred to your wallet.</string>
    <string name="payment_type_selection_error">Please select payment method</string>
    <string name="terms_condition_error">Please accept our terms and conditions</string>
    <string name="start_">Start</string>
    <string name="stripe">Stripe</string>
    <string name="wallet_recharge">Wallet Recharge</string>
    <string name="wallet_deduction">Wallet Deduction</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="referral_earning">Referral Earning</string>
    <string name="select_add_ons">Select Add-ons</string>
    <string name="remove_fev_alert">Are you sure to remove this item from your favourite list?</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="invalid_card">Invalid Card Details</string>
    <string name="enter_amount">Please enter the amount</string>
    <string name="valid_amount">Please enter the valid amount</string>
    <string name="one_amount">Amount must be greater than 1</string>
    <string name="wallet_sufficient_amount">You don\'t have sufficient wallet amount. Please select another payment method</string>
</resources>