<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/gray_orange"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:id="@+id/rlEditProfile">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_4sdp"
            android:onClick="onClick"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:layout_centerInParent="true"
            fontPath="@string/font_thin"
            android:text="@string/edit_profile"
            tools:ignore="MissingPrefix" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/rlEditProfile"
        >
        <RelativeLayout
            android:layout_width="@dimen/_95sdp"
            android:layout_height="@dimen/_95sdp"
            android:layout_marginTop="@dimen/_45sdp"
            android:layout_gravity="center_horizontal">
            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                app:riv_oval="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_placeholder"
                android:id="@+id/ivProfile"
                />
            <ImageView
                android:id="@+id/ivGellary"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:adjustViewBounds="true"
                android:onClick="onClick"
                android:padding="@dimen/_8sdp"
                android:background="@drawable/bg_black_corner_10"
                android:src="@drawable/ic_camera"
                app:tint="@color/white" />
        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/bg_onlycorner_gary"
            android:id="@+id/edUserName"
            fontPath="@string/font_medium"
            android:textColor="@color/black"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="1dp"
            android:hint="@string/full_name"
            android:textSize="@dimen/_12ssp"
            android:textAlignment="viewStart"
            android:gravity="start|center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"

            tools:ignore="MissingPrefix" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/bg_onlycorner_gary"
            android:id="@+id/edEmailAddress"
            fontPath="@string/font_medium"
            android:textColor="@color/black"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="1dp"
            android:hint="@string/email"
            android:textSize="@dimen/_12ssp"
            android:editable="false"
            android:textAlignment="viewStart"
            android:gravity="start|center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            tools:ignore="MissingPrefix" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/bg_onlycorner_gary"
            android:id="@+id/tvMobileNumber"
            fontPath="@string/font_medium"
            android:textColor="@color/black"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="1dp"
            android:hint="@string/mobileno"
            android:editable="false"
            android:textSize="@dimen/_12ssp"
            android:textAlignment="viewStart"
            android:gravity="start|center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            tools:ignore="MissingPrefix" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:backgroundTint="@color/colorPrimary"
        android:background="@drawable/bg_corner_white_10"
        fontPath="@string/font_bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_alignParentBottom="true"
        android:text="@string/update"
        android:onClick="onClick"
        android:id="@+id/tvUpdate"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_10sdp"
        tools:ignore="MissingPrefix" />
</RelativeLayout>